--- a/seminar_02/seminar_02.ipynb
+++ b/seminar_02/seminar_02.ipynb
@@ -10,9 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\anaconda3\\envs\\neural_networks\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import random\n",
@@ -58,7 +67,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.2392, 0.0844, 0.1145, 0.0465, 0.0702, 0.1389, 0.0782, 0.0710, 0.0411,\n",
+      "         0.1159]], grad_fn=<SoftmaxBackward0>)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_25660\\2285761283.py:20: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  x = F.softmax(x)\n"
+     ]
+    }
+   ],
    "source": [
     "# Модель 1\n",
     "class CNN1(nn.Module):\n",
@@ -69,7 +95,7 @@
     "        self.drop1 = nn.Dropout2d(0.5)\n",
     "        self.conv2 = nn.Conv2d(64, 128, 3, padding=1)\n",
     "        self.bn2 = nn.BatchNorm2d(128)\n",
-    "        self.fc = nn.Linear(128 * 8 * 8, 10)\n",
+    "        self.fc = nn.Linear(128 * 16 * 16, 10)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = F.relu(self.conv1(x))\n",
@@ -79,19 +105,31 @@
     "        x = F.max_pool2d(x, 2)\n",
     "        x = x.view(x.size(0), -1)\n",
     "        x = self.fc(x)\n",
+    "        x = F.softmax(x) # Нужно ли\n",
+    "        \n",
     "        return x\n",
     "\n",
     "\n",
-    "# model1 = CNN1()\n",
-    "# test_input = torch.randn(1, 3, 64, 64)\n",
-    "# output = model1(test_input)\n"
+    "model1 = CNN1()\n",
+    "test_input = torch.randn(1, 3, 64, 64)\n",
+    "output = model1(test_input)\n",
+    "print(output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 0.1450,  0.0414, -0.0506,  0.0290,  0.1554, -0.0410,  0.0041, -0.0886,\n",
+      "        -0.0120,  0.0630], grad_fn=<ViewBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "# Модель 2\n",
     "class CNN2(nn.Module):\n",
@@ -104,11 +142,12 @@
     "            nn.ReLU(),\n",
     "            nn.MaxPool2d(2),\n",
     "        )\n",
-    "        self.fc1 = nn.Linear(64, 128)\n",
+    "        self.fc1 = nn.Linear(64 * 32 * 32, 128)\n",
     "        self.fc2 = nn.Linear(128, 10)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.features(x)\n",
+    "        x = torch.flatten(x)\n",
     "        x = self.fc1(x)\n",
     "        x = F.relu(x)\n",
     "        x = self.fc2(x)\n",
@@ -118,33 +157,43 @@
     "model2 = CNN2()\n",
     "test_input = torch.randn(1, 3, 64, 64)\n",
     "output = model2(test_input)\n",
-    "\n"
+    "print(output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0.2875,  0.5640,  0.0135, -0.1118,  0.0495, -0.1621, -0.1093,  0.1143,\n",
+      "         -0.0828,  0.1515]], grad_fn=<AddmmBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "class CNN3(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.branch1 = nn.Conv2d(3, 64, 3, padding=1)\n",
     "        self.branch2 = nn.Conv2d(3, 128, 5, padding=2)\n",
-    "        self.fc = nn.Linear(192 * 16 * 16, 10)\n",
+    "        self.fc = nn.Linear(192 * 64 * 64, 10)\n",
     "\n",
     "    def forward(self, x):\n",
     "        b1 = F.relu(self.branch1(x))\n",
     "        b2 = F.relu(self.branch2(x))\n",
-    "        out = torch.cat([b1, b2], dim=0)\n",
+    "        out = torch.cat([b1, b2], dim=1)\n",
     "        out = out.view(out.size(0), -1)\n",
     "        return self.fc(out)\n",
     "\n",
     "model3 = CNN3()\n",
     "test_input = torch.randn(1, 3, 64, 64)\n",
     "output = model3(test_input)\n",
-    "\n"
+    "\n",
+    "print(output)"
    ]
   },
   {
@@ -264,9 +313,7 @@
     "\n",
     "print(f\"Train size: {len(train_dataset)}\")\n",
     "print(f\"Val size: {len(val_dataset)}\")\n",
-    "print(f\"Классов: {len(train_dataset.class_names)}\")\n",
-    "\n",
-    "\n"
+    "print(f\"Классов: {len(train_dataset.class_names)}\")"
    ]
   },
   {
@@ -742,7 +789,7 @@
     "- Поддерживает как PIL, так и OpenCV\n",
     "- Простой и гибкий API\n",
     "\n",
-    "** Создадим DataLoader с OpenCV и Albumentations:**\n"
+    "**Создадим DataLoader с OpenCV и Albumentations:**\n"
    ]
   },
   {
@@ -1061,9 +1108,7 @@
     "total_params = sum(p.numel() for p in model.parameters())\n",
     "trainable_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
     "print(f\" Всего параметров: {total_params:,}\")\n",
-    "print(f\" Обучаемых параметров: {trainable_params:,}\")\n",
-    "\n",
-    "\n"
+    "print(f\" Обучаемых параметров: {trainable_params:,}\")\n"
    ]
   },
   {
@@ -1328,7 +1373,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "neural_networks",
    "language": "python",
    "name": "python3"
   },
@@ -1342,7 +1387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.13.7"
   },
   "orig_nbformat": 4
  },
